fix responsive css and layout issues

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,20 @@
 
 @import "tailwindcss";
 
-*{
-    font-family: "Saira", sans-serif;
+* {
+  font-family: "Saira", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-::-webkit-scrollbar{
-  display:none;
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
